# buffer

./: Cargo.toml
examples/: example.rs
src/: lib.rs  lib_.rs  traits.rs
src/impls/: arrayvec.rs  buffer_ref.rs  mod.rs  slice.rs  vec.rs
