[package]
name = "buffer"
version = "0.1.8"
authors = ["Tobias Bucher <tobiasbucher5991@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/tbu-/buffer"
description = "Safe, write-only, generics-free buffer abstraction"
readme = "README.md"

[dependencies]
arrayvec = "0.3.7"
mac = "0.0.2"
